--- a/diceRolling.css
+++ b/diceRolling.css
@@ -1,5 +1,9 @@
 h2, .first-box, .second-box {
-    border : 3px solid black;
+    border : 4px solid black;
     text-align: left;
     position: relative;
+    margin-top: 20px;
+}
+#dice-para {
+    font-size: 40 px;
 }
